--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
               <div class="card" style="width: 18rem;">
-                  <img src="/Users/xin/makeSchool/spd 1.2/sprint3/evolving_google_identity_2x.max-4000x2000.jpegquality-90.jpg" class="card-img-top" alt="Google icon">
+                  <img src="evolving_google_identity_2x.max-4000x2000.jpegquality-90.jpg" class="card-img-top" alt="Google icon">
                   <div class="card-body">                  
                     <p class="card-text">Google LLC is an American multinational technology company, that specializes in internet-related services and products</p>
                     <a href="https://www.google.com/" class="btn btn-primary stretched-link">Go</a>
@@ -62,7 +62,7 @@
 
           <div class="col-lg-4">
           <div class="card" style="width: 18rem;">
-              <img src="/Users/xin/makeSchool/spd 1.2/sprint3/download.png" class="card-img-top" alt="Facebook icon">
+              <img src="download.png" class="card-img-top" alt="Facebook icon">
               <div class="card-body">
                 
                 <p class="card-text">Facebook, Inc. is an American online social media and social networking service company based in Menlo Park, California.</p>
@@ -73,7 +73,7 @@
 
           <div class="col-lg-4">
               <div class="card" style="width: 18rem;">
-                  <img src="/Users/xin/makeSchool/spd 1.2/sprint3/twitter-hearts-and-stars.0.0.png" class="card-img-top" alt="Twitter Icon">
+                  <img src="twitter-hearts-and-stars.0.0.png" class="card-img-top" alt="Twitter Icon">
                   <div class="card-body">
                     <p class="card-text">Twitter is an American microbloggin and social networking service on which users post and interact with messages knowsn at "tweets."</p>
                     <a href="https://twitter.com/home" class="btn btn-primary stretched-link">Go</a>
