--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
               <div class="card" style="width: 18rem;">
-                  <img src="evolving_google_identity_2x.max-4000x2000.jpegquality-90.jpg" class="card-img-top" alt="Google icon">
+                  <img src="/evolving_google_identity_2x.max-4000x2000.jpegquality-90.jpg/" class="card-img-top" alt="Google icon">
                   <div class="card-body">                  
                     <p class="card-text">Google LLC is an American multinational technology company, that specializes in internet-related services and products</p>
                     <a href="https://www.google.com/" class="btn btn-primary stretched-link">Go</a>
