better contrast on nav bar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-sm-6">
           <div class="card" style="width: 18rem;">
               <img src="download.png" class="card-img-top" alt="Facebook icon">
               <div class="card-body">
@@ -101,7 +101,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-sm-6">
               <div class="card" style="width: 18rem;">
                   <img src="twitter-hearts-and-stars.0.0.png" class="card-img-top" alt="Twitter Icon">
                   <div class="card-body">
@@ -127,9 +127,9 @@
 
     
      <!-- FOOTER -->
-  <!-- <div class="bg-secondary p-5 text-white">
+   <div class="bg-secondary p-5 text-white">
         &copy; 2019 Launch Page Inc
-      </div> -->
+      </div> 
 
 </body>
 </html>
