updated navbar for features and community page

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
    
 
     <!-- Container -->
+    <!-- <div class="container-fluid" style="background:transparent;" ></div> -->
     <div class="container pb-5 pt-5">
     <div class ="Users/xin/makeSchool/spd 1.2/capstone/images.png"></div>
         <div class="row">
